--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=League+Spartan:wght@100..900&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Pixelify+Sans:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sanchez:ital@0;1&family=VT323&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=League+Spartan:wght@100..900&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Pixelify+Sans:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sanchez:ital@0;1&family=VT323&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=League+Spartan:wght@100..900&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Pixelify+Sans:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sanchez:ital@0;1&family=Sarina&family=VT323&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -6,53 +10,65 @@
 
 body{
     height: 100vh;
+    scroll-behavior: smooth;
 }
 
-.site-container{
-    padding: 2.5rem;
+.site-header{
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    padding: 1.5rem;
     align-items: center;
-    justify-content: center;
 }
 
-.site-drink__thumbnail{
-    max-width: 400px;
-    height: 400px;
+.site-logo{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.site-logo__img{
+    height: 40px;
+    width: 30px;
     object-fit: cover;
-    width: 100%;
-    border-radius: 32px;
 }
 
-ul{
+.site-logo__text{
+    font-family: "Playfair Display", serif;
+    font-size: 24px;
+}
+
+.site-navbar{
     list-style: none;
-}
-
-.site-drink__tags{
     display: flex;
-    gap: 0.5rem;
+    gap: 2rem;
+    font-family: "Montserrat", sans-serif;
 }
 
-.site-drink__tags li{
-    background-color: rgba(223, 118, 118, 0.5);
-    border: 2px solid rgb(122, 59, 59);
-    padding: 0.5rem 1rem;
-    border-radius: 16px;
+.site-navbar__item a{
+    text-decoration: none;
+    color: black;
+    transition: color 0.3s ease;
 }
 
-.site-drink__info{
+.site-navbar__item a:hover{
+    color: #f39d2e;
+}
+
+.site-footer{
     display: flex;
-    max-width: 600px;
-    width: 100%;
-    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 1rem;
+    background-color: #303030;
+    color: white;
+    font-family: "Montserrat", sans-serif;
 }
 
-
-.site-drink__instructions{
-    padding: 1.5rem;
-    word-break: break-all;
+.site-footer__author a{
+    text-decoration: none;
+    color: #f39d2e;
+    transition: color 0.3s ease;
 }
 
-.site-drink__ingredients{
-    padding: 1.5rem;
+.site-footer__author a:hover{
+    opacity: 0.9;
 }
