--- a/public/styles/recipe.css
+++ b/public/styles/recipe.css
@@ -55,6 +55,27 @@ ul {
     line-height: 1.5;
 }
 
+.error-container{
+    height: calc(100vh - 120px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2.5rem;
+}
+
+.error-container img{
+    max-width: 400px;
+    width: 100%;
+}
+
+.error-container h1{
+    font-family: "Montserrat", sans-serif;
+    font-size: 3.5rem;
+    color: #3f3f3f;
+}
+
+
 .site-ingredients__list {
     margin: 0.5rem 1.5rem;
 }
