reduce the error image and text size on smaller screens

--- a/public/styles/recipe.css
+++ b/public/styles/recipe.css
@@ -98,4 +98,12 @@ ul {
     .site-ingredients__list {
         font-size: 1rem;
     }
+
+    .error-container img{
+        max-width: 200px;
+    }
+
+    .error-container h1{
+        font-size: 1.5rem;
+    }
 }
